# imap-backup

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMAP_BACKUP_PROJECT_BRIEF.md  README.md  docker-compose.yml
config/: config.example.toml
examples/synology/: README.md  docker-compose.yml
src/: README.md  config.rs  error.rs  fingerprint.rs  imap_client.rs  maildir.rs  main.rs  recovery.rs  shutdown.rs  state.rs  sync.rs  sync_plan.rs  types.rs
