[package]
name = "email-backups"
version = "0.1.0"
edition = "2024"
description = "IMAP email backup tool with move detection and archival retention"

[dependencies]
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rusqlite = { version = "0.39", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
zeroize = "1"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
unsafe_code = "deny"
